--- a/my_app/src/RetailMarket/Sidebar/sidebar.css
+++ b/my_app/src/RetailMarket/Sidebar/sidebar.css
@@ -7,6 +7,7 @@
     left: 0;
     background-color: #1f1d1d;
     overflow-x: hidden;
+    transition: transform 0.6s ease;
     padding-top: 20px;
 }
 button{
@@ -19,7 +20,7 @@ li{
     cursor: pointer;
     padding: 8px 10px;
     border-radius: 6px;
-    transition: background 0.3s;
+    transition: 0.3s;
   }
   
   .sidebar-main .nav-item:hover {
