--- a/my_app/src/App.css
+++ b/my_app/src/App.css
@@ -12,8 +12,6 @@
   }
   
 .addbillbutton{
-    position: relative;
-    left: 50%;
-    bottom: 0;
-    min-height: 100%;
+    position: absolute;
+    bottom: 15px;
 }
